fix: [TKC-4831] workflow tests - missing resoure.requests added (#7019)
* workflow tests - missing resoure.requests added

* resources typo fixed

* fixed after CR

* fixed after CR

* fixed after CR

--- a/test/locust/crd-workflow/smoke.yaml
+++ b/test/locust/crd-workflow/smoke.yaml
@@ -131,8 +131,8 @@ spec:
   container:
     resources:
       requests:
-        cpu: 128m
-        memory: 128Mi
+        cpu: 256m
+        memory: 256Mi
   services:
     master:
       transfer:
@@ -166,6 +166,10 @@ spec:
       - name: distribute/evenly
       container:
         workingDir: /data/repo/test/locust/locust-project
+        resources:
+          requests:
+            cpu: 128m
+            memory: 128Mi
       paused: true # synchronize running all workers - optional
       run:
         image: locustio/locust:2.32.3
