Add noctx and contextcheck linters
Enable context-aware linters to catch cases where context.Background()
is used instead of the HTTP request context in handlers. This prevents
issues like #253 from being introduced in future code.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,6 +8,8 @@ linters:
     - staticcheck
     - unused
     - ineffassign
+    - noctx
+    - contextcheck
   exclusions:
     generated: lax
     paths:
