--- a/test/testkube/installation-tests/crd-workflow/oss-installation.yaml
+++ b/test/testkube/installation-tests/crd-workflow/oss-installation.yaml
@@ -13,9 +13,9 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-        - test/k6/crd-workflow/smoke.yaml
+        - test/postman/crd-workflow/smoke.yaml
   container:
-    workingDir: /data/repo/test/k6/crd-workflow
+    workingDir: /data/repo/test/postman/crd-workflow
     resources:
       requests:
         cpu: "500m"
@@ -49,6 +49,6 @@ spec:
     - name: Apply TestWorkflow
       shell: |
         kubectl apply -f smoke.yaml -n testkube
-        kubectl get testworkflow k6-workflow-smoke -n testkube && echo "found" || kubectl get all -n testkube
+        kubectl get testworkflow postman-workflow-smoke-junit -n testkube && echo "found" || kubectl get all -n testkube
     - name: Run TestWorkflow
-      shell: testkube run tw k6-workflow-smoke --watch && echo "executed correctly"
+      shell: testkube run tw postman-workflow-smoke-junit --watch && echo "executed correctly"
