feat: add gitops/webhooks capability toggles for agents

--- a/k8s/helm/testkube-runner/templates/role.yaml
+++ b/k8s/helm/testkube-runner/templates/role.yaml
@@ -185,7 +185,8 @@ rules:
 ---
 
 # Allow Agent to watch resources for triggers functionality
-{{- if and .Values.pod.serviceAccount.autoCreate .Values.listener.enabled }}
+{{- $watchersEnabled := or .Values.listener.enabled .Values.gitops.enabled }}
+{{- if and .Values.pod.serviceAccount.autoCreate $watchersEnabled }}
 {{- $watchAll := .Values.listener.watchAllNamespaces }}
 {{- $additional := default (list) .Values.listener.additionalNamespaces }}
 {{- if $watchAll }}
