--- a/k8s/helm/testkube-runner/templates/deployment.yaml
+++ b/k8s/helm/testkube-runner/templates/deployment.yaml
@@ -312,13 +312,13 @@ spec:
             - name: "DISABLE_TEST_TRIGGERS"
               value: "{{ if .Values.listener.enabled }}false{{ else }}true{{ end }}"
             - name: "DISABLE_WEBHOOKS"
-              value: "true"
+              value: "{{ if .Values.webhooks.enabled }}false{{ else }}true{{ end }}"
             - name: "DISABLE_DEPRECATED_TESTS"
               value: "true"
             - name: "DISABLE_DEFAULT_AGENT"
               value: "true"
             - name: "GITOPS_KUBERNETES_TO_CLOUD_ENABLED"
-              value: "false"
+              value: "{{ if .Values.gitops.enabled }}true{{ else }}false{{ end }}"
             - name: "GITOPS_CLOUD_TO_KUBERNETES_ENABLED"
               value: "false"
             - name: "ENABLE_CRON_JOBS"
