--- a/test/suites/special-cases/special-cases-suite.yaml
+++ b/test/suites/special-cases/special-cases-suite.yaml
@@ -37,6 +37,7 @@ spec:
       - name: special-cases-execution-tags
       - name: special-cases-execute-workflows-selector-matchlabels
       - name: special-cases-silent-workflow
+      - name: special-cases-config-override
   - name: Execute .dev-specific workflows
     condition: 'environment.id == "tkcenv_03e3ff499f13ccba"' # execute only at .dev environment
     execute:
