fix: [TKC-4959] enable gitops

--- a/k8s/helm/testkube-api/values.yaml
+++ b/k8s/helm/testkube-api/values.yaml
@@ -175,7 +175,7 @@ next:
   # - tkcsync_*** - GitOps Agent
   gitops:
     ## Should it copy data from Kubernetes to Control Plane
-    syncKubernetesToCloud: false
+    syncKubernetesToCloud: true
 
   # Configure the legacy Tests and Test Suites execution
   # - tkcagnt_*** - Super Agent
