--- a/test/testkube/installation-tests/crd-workflow/setup-dind-kind-cluster-template.yaml
+++ b/test/testkube/installation-tests/crd-workflow/setup-dind-kind-cluster-template.yaml
@@ -32,8 +32,8 @@ spec:
         periodSeconds: 1
       resources:
         requests:
-          cpu: "500m"
-          memory: "512Mi"
+          cpu: 2
+          memory: 4Gi
   steps:
   - container:
       env:
