--- a/test/special-cases/edge-cases-expected-fails.yaml
+++ b/test/special-cases/edge-cases-expected-fails.yaml
@@ -166,7 +166,7 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: expected-fail-service-oomkilled
+  name: expected-fail-service-oomkilled # Issue: TKC-5012
   labels:
     core-tests: expected-fail
 spec:
@@ -186,6 +186,37 @@ spec:
       logs: always
       count: 1
       shell: echo "Expected oomkilled" && sleep 3 && python3 -c "a = ' ' * 10**9" && echo "This should not be printed if OOMKill happened"
+  steps:
+  - name: Run tests
+    shell: echo "Running step while service is expected to be oomkilled" && sleep 30s
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: expected-fail-service-oomkilled-after-readiness # Issue: TKC-5014
+  labels:
+    core-tests: expected-fail
+spec:
+  container:
+    image: alpine:3.22.0
+    resources:
+      requests:
+        cpu: 128m
+        memory: 128Mi
+  services:
+    service:
+      image: python:3.14.3-slim-trixie
+      resources:
+        limits:
+          cpu: 128m
+          memory: 50Mi
+      logs: always
+      count: 1
+      readinessProbe:
+        exec:
+          command: ["sh", "-c", "test -f /tmp/ready"]
+        periodSeconds: 1
+      shell: touch /tmp/ready && echo "Expected oomkilled" && sleep 5 && python3 -c "a = ' ' * 10**9" && echo "This should not be printed if OOMKill happened"
   steps:
   - name: Run tests
     shell: echo "Running step while service is expected to be oomkilled" && sleep 30s
