--- a/test/suites/special-cases/edge-cases-expected-fails-suite.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails-suite.yaml
@@ -21,6 +21,7 @@ spec:
       - name: expected-fail-cypress-incorrect-workingdir
       - name: expected-fail-step-oomkilled
       - name: expected-fail-service-oomkilled
+      - name: expected-fail-service-oomkilled-after-readiness
       - name: expected-fail-cypress-artifacts-condition-always-with-artifacts
       - name: expected-fail-k6-test-report-condition-always-no-artifacts
       - name: expected-fail-timeout-activedeadlineseconds
