--- a/test/testkube/installation-tests/crd-workflow/enterprise-installation.yaml
+++ b/test/testkube/installation-tests/crd-workflow/enterprise-installation.yaml
@@ -8,6 +8,8 @@ description: "Enterprise installation test - DinD+kind"
 spec:
   system:
     pureByDefault: true
+  job:
+    activeDeadlineSeconds: 600
   content:
     git:
       uri: https://github.com/kubeshop/testkube
@@ -69,7 +71,40 @@ spec:
       kubectl apply -f smoke.yaml -n testkube
       kubectl get testworkflow postman-workflow-smoke-junit -n testkube && echo "found" || kubectl get all -n testkube
   - name: Run TestWorkflow
+    timeout: 180s
     shell: testkube run tw postman-workflow-smoke-junit --watch && echo "executed correctly"
+  - name: Dump pod logs and describe
+    condition: always
+    shell: |
+      set +e
+
+      NS=testkube
+      OUT=/data/artifacts/pod-logs
+      mkdir -p "$OUT"
+
+      echo "=== Pods in namespace $NS ==="
+      kubectl -n "$NS" get pods -o wide > "$OUT/pods.txt" 2>&1 || true
+
+      echo "=== Events in namespace $NS ==="
+      kubectl -n "$NS" get events --sort-by=.lastTimestamp > "$OUT/events.txt" 2>&1 || true
+
+      kubectl -n "$NS" get pods -o jsonpath='{range .items[*]}{.metadata.name}{"\n"}{end}' |
+      while read -r POD; do
+        echo "=== Dumping $POD ==="
+
+        kubectl -n "$NS" describe pod "$POD" \
+          > "$OUT/$POD.describe.txt" 2>&1 || true
+
+        kubectl -n "$NS" logs "$POD" --all-containers --timestamps \
+          > "$OUT/$POD.log" 2>&1 || true
+
+        kubectl -n "$NS" logs "$POD" --all-containers --previous --timestamps \
+          > "$OUT/$POD.previous.log" 2>&1 || true
+      done
+    artifacts:
+      workingDir: /data/artifacts/
+      paths:
+      - '**/*'
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
@@ -82,6 +117,8 @@ description: "Enterprise installation test - edge, multi-namespace. Can be run O
 spec:
   system:
     pureByDefault: true
+  job:
+    activeDeadlineSeconds: 600
   concurrency:
     max: 1
   content:
