feat: add failFast field to StepParallel type
Add FailFast bool to StepParallel and IndependentStepParallel structs.
When true, remaining parallel workers are aborted on first failure.
Defaults to false for backwards compatibility.

Also adds failFast to the OpenAPI spec and MCP workflow schema.

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9340,6 +9340,9 @@ components:
           parallelism:
             type: integer
             description: how many resources could be scheduled in parallel
+          failFast:
+            type: boolean
+            description: abort remaining parallel workers on first failure
           description:
             type: string
             description: worker description to display
@@ -9369,6 +9372,9 @@ components:
           parallelism:
             type: integer
             description: how many resources could be scheduled in parallel
+          failFast:
+            type: boolean
+            description: abort remaining parallel workers on first failure
           description:
             type: string
             description: worker description to display
