chore: regenerate CRDs and Helm templates
Generated by: controller-gen + yq post-processing + crd-postprocess.js

--- a/k8s/crd/testworkflows.testkube.io_testworkflows.yaml
+++ b/k8s/crd/testworkflows.testkube.io_testworkflows.yaml
@@ -1613,6 +1613,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -7148,6 +7151,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -10477,6 +10483,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
