--- a/k8s/crd/testworkflows.testkube.io_testworkflowtemplates.yaml
+++ b/k8s/crd/testworkflows.testkube.io_testworkflowtemplates.yaml
@@ -1595,6 +1595,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -6991,6 +6994,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -10201,6 +10207,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
