--- a/k8s/helm/testkube-operator/templates/testworkflows.testkube.io_testworkflows.yaml
+++ b/k8s/helm/testkube-operator/templates/testworkflows.testkube.io_testworkflows.yaml
@@ -1614,6 +1614,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -7149,6 +7152,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -10478,6 +10484,9 @@ spec:
                           execution:
                             description: values to be used for test workflow execution
                             x-kubernetes-preserve-unknown-fields: true
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
