--- a/k8s/helm/testkube-operator/templates/testworkflows.testkube.io_testworkflowtemplates.yaml
+++ b/k8s/helm/testkube-operator/templates/testworkflows.testkube.io_testworkflowtemplates.yaml
@@ -1596,6 +1596,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -6992,6 +6995,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
@@ -10202,6 +10208,9 @@ spec:
                                   type: object
                                 type: array
                             type: object
+                          failFast:
+                            description: abort remaining parallel workers on first failure
+                            type: boolean
                           fetch:
                             description: instructions for fetching files back
                             items:
