--- a/test/suites/special-cases/special-cases-suite.yaml
+++ b/test/suites/special-cases/special-cases-suite.yaml
@@ -38,6 +38,8 @@ spec:
       - name: special-cases-execute-workflows-selector-matchlabels
       - name: special-cases-silent-workflow
       - name: special-cases-config-override
+      - name: special-cases-parallel-steps
+      - name: special-cases-parallel-steps-matrix
   - name: Execute .dev-specific workflows
     condition: 'environment.id == "tkcenv_03e3ff499f13ccba"' # execute only at .dev environment
     execute:
