--- a/test/suites/special-cases/edge-cases-expected-fails-suite.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails-suite.yaml
@@ -41,3 +41,4 @@ spec:
       - name: expected-fail-parallel-step-failed
       - name: expected-fail-parallel-step-timed-out
       - name: expected-fail-parallel-oomkilled
+      - name: expected-fail-parallel-step-fail-fast
