--- a/test/suites/special-cases/special-cases-suite.yaml
+++ b/test/suites/special-cases/special-cases-suite.yaml
@@ -40,6 +40,7 @@ spec:
       - name: special-cases-config-override
       - name: special-cases-parallel-steps
       - name: special-cases-parallel-steps-matrix
+      - name: special-cases-parallel-steps-fail-fast-disabled
   - name: Execute .dev-specific workflows
     condition: 'environment.id == "tkcenv_03e3ff499f13ccba"' # execute only at .dev environment
     execute:
