feat: Enhance Tiltfile for PostgreSQL setup and CLI integration
- Added PostgreSQL configuration options for username, password, and database name.
- Implemented a local resource to ensure the 'backend' database exists after PostgreSQL is ready.
- Introduced CLI build and configuration resources for `kubectl-testkube`.
- Updated .gitignore to include the new CLI binary path.

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ movie.mp4
 # Local
 build/_local/values.dev.yaml
 build/_local/agent-server
+build/_local/kubectl-testkube
 tilt-values.yaml
 tilt_modules/
 .tiltbuild/
