--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ movie.mp4
 build/_local/values.dev.yaml
 build/_local/agent-server
 build/_local/kubectl-testkube
+build/_local/tilt-registry-values.yaml
 tilt-values.yaml
 tilt_modules/
 .tiltbuild/
